Alteracoes do Jakarta EE e Jakarta Persistence 3.0